--- a/Part2_restored .ipynb
+++ b/Part2_restored .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>20000</td>\n",
        "      <td>2</td>\n",
@@ -94,7 +94,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>50000</td>\n",
        "      <td>2</td>\n",
@@ -118,7 +118,7 @@
        "      <td>1000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>50000</td>\n",
        "      <td>1</td>\n",
@@ -142,7 +142,7 @@
        "      <td>679</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>50000</td>\n",
        "      <td>1</td>\n",
@@ -166,7 +166,7 @@
        "      <td>800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>500000</td>\n",
        "      <td>1</td>\n",
@@ -190,7 +190,7 @@
        "      <td>13770</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -214,7 +214,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14995</th>\n",
+       "      <td>14995</td>\n",
        "      <td>0</td>\n",
        "      <td>100000</td>\n",
        "      <td>1</td>\n",
@@ -238,7 +238,7 @@
        "      <td>2000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14996</th>\n",
+       "      <td>14996</td>\n",
        "      <td>0</td>\n",
        "      <td>220000</td>\n",
        "      <td>1</td>\n",
@@ -262,7 +262,7 @@
        "      <td>1000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14997</th>\n",
+       "      <td>14997</td>\n",
        "      <td>0</td>\n",
        "      <td>150000</td>\n",
        "      <td>1</td>\n",
@@ -286,7 +286,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14998</th>\n",
+       "      <td>14998</td>\n",
        "      <td>1</td>\n",
        "      <td>30000</td>\n",
        "      <td>1</td>\n",
@@ -310,7 +310,7 @@
        "      <td>3100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14999</th>\n",
+       "      <td>14999</td>\n",
        "      <td>1</td>\n",
        "      <td>80000</td>\n",
        "      <td>1</td>\n",
@@ -368,7 +368,7 @@
        "[15000 rows x 24 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>120000</td>\n",
        "      <td>2</td>\n",
@@ -452,7 +452,7 @@
        "      <td>2000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>90000</td>\n",
        "      <td>2</td>\n",
@@ -476,7 +476,7 @@
        "      <td>5000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>140000</td>\n",
        "      <td>2</td>\n",
@@ -500,7 +500,7 @@
        "      <td>1000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>0</td>\n",
        "      <td>20000</td>\n",
        "      <td>1</td>\n",
@@ -524,7 +524,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>200000</td>\n",
        "      <td>2</td>\n",
@@ -548,7 +548,7 @@
        "      <td>66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -572,7 +572,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14995</th>\n",
+       "      <td>14995</td>\n",
        "      <td>0</td>\n",
        "      <td>150000</td>\n",
        "      <td>1</td>\n",
@@ -596,7 +596,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14996</th>\n",
+       "      <td>14996</td>\n",
        "      <td>0</td>\n",
        "      <td>140000</td>\n",
        "      <td>1</td>\n",
@@ -620,7 +620,7 @@
        "      <td>2000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14997</th>\n",
+       "      <td>14997</td>\n",
        "      <td>0</td>\n",
        "      <td>10000</td>\n",
        "      <td>1</td>\n",
@@ -644,7 +644,7 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14998</th>\n",
+       "      <td>14998</td>\n",
        "      <td>1</td>\n",
        "      <td>80000</td>\n",
        "      <td>1</td>\n",
@@ -668,7 +668,7 @@
        "      <td>4000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14999</th>\n",
+       "      <td>14999</td>\n",
        "      <td>1</td>\n",
        "      <td>50000</td>\n",
        "      <td>1</td>\n",
@@ -726,7 +726,7 @@
        "[15000 rows x 24 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -804,7 +804,7 @@
        "       -0.30289045, -0.31031133, -0.28876454])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,14 +822,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best accuracy :  0.8163333333333332 , best parameters :  {'criterion': 'entropy', 'max_depth': 6, 'max_features': 'log2'}\n"
+      "best accuracy :  0.8182666666666667 , best parameters :  {'criterion': 'gini', 'max_depth': 4, 'max_features': 'sqrt'}\n"
      ]
     }
    ],
@@ -896,11 +896,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 64,
-=======
    "execution_count": 11,
->>>>>>> a2ae9f3f0fdcd21511c96b98fe7a980c28264de3
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1410,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1423,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1529,7 +1525,7 @@
        "[15000 rows x 2 columns]"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1543,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1553,15 +1549,45 @@
        "       [ 2179,  1139]], dtype=int64)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from sklearn import metrics\n",
     "# Confusion Matrix\n",
-    "CM = confusion_matrix(y_test, predY, labels=[0, 1])\n",
+    "# CM = confusion_matrix(y_test, predY, labels=[0, 1])\n",
+    "CM = metrics.confusion_matrix(y_test, predY)\n",
     "CM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11124   558]\n",
+      " [ 2179  1139]]\n",
+      "accuracy: 0.82\n",
+      "class 0, precision: 0.84, recall: 0.95,  f-score: 0.89\n",
+      "class 1, precision: 0.67, recall: 0.34,  f-score: 0.45\n"
+     ]
+    }
+   ],
+   "source": [
+    "# evaluation\n",
+    "print(metrics.confusion_matrix(y_test, predY))\n",
+    "print(\"accuracy: %.2f\" % metrics.accuracy_score(y_test, predY))\n",
+    "\n",
+    "# calculate precision and recall (and f-score, a weighted average of precision and recall) \n",
+    "precision,recall,fscore,_ = metrics.precision_recall_fscore_support(y_test, predY )\n",
+    "for c in np.unique(y_test):\n",
+    "        print(\"class %s, precision: %.2f, recall: %.2f,  f-score: %.2f\" % (c, precision[c], recall[c], fscore[c]))"
    ]
   },
   {
@@ -1586,15 +1612,7 @@
     "(tn, fp, fn, tp)\n",
     "\n",
     "recall=tp/(tp+fn)\n",
-    "recall\n",
-    "\n",
-    "# Recall should be \n",
-    "\n",
-    "#         tp        fp\n",
-    "#  fn    11124     558\n",
-    "#  fp    2179      1139\n",
-    "\n",
-    "# 11124 / 11124 + 2179 = 0.8362"
+    "recall\n"
    ]
   },
   {
@@ -2176,7 +2194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
