--- a/Part2_restored.ipynb
+++ b/Part2_restored.ipynb
@@ -1467,12 +1467,11 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "rfc = RandomForestClassifier(random_state=0, criterion='gini')\n",
+    "rfc = RandomForestClassifier(random_state=0, criterion='gini', bootstrap=True)\n",
     "\n",
     "parameters = {\n",
-    "    'n_estimators': [100,300,500,700,900],\n",
-    "    'bootstrap': [True, False], \n",
-    "    'max_features': range(5,16), \n",
+    "    'n_estimators': [500,700,900],\n",
+    "    'max_features': range(10,15), \n",
     "}\n",
     "\n",
     "grid = GridSearchCV(estimator=rfc, param_grid=parameters, \n",
