--- a/Part1.ipynb
+++ b/Part1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
        "[139 rows x 61 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
        "       [0.027 , 0.0163, 0.0341, ..., 0.0094, 0.0105, 0.0093]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
        "Name: Class, Length: 139, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,16 +456,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def euclideanDistance(in1,in2):\n",
+    "    '''\n",
+    "    Given two vectors in1 and in2, returns euclidean distance between them\n",
+    "    '''\n",
     "    dist = np.linalg.norm(in1-in2)\n",
     "    return dist\n",
     "\n",
     "\n",
     "def manhattanDistance(in1, in2):\n",
+    "    '''\n",
+    "    Given two vectors in1 and in2, returns manhattan distance between them\n",
+    "    '''\n",
     "    dist = 0.0\n",
     "    for i in range(len(in1)):\n",
     "        dist += abs(in1[i] - in2[i])\n",
@@ -474,17 +480,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "getNeighbour takes in a test data point (x_), training data (X), and distance function (dist_f);\n",
-    "It loops through all training data and calls the distance function to calculate the distance between the test data point\n",
-    "and all data points in the training set. Finds the smallest distance and returns index of the row with the smallest \n",
-    "distance to test data point. \n",
-    "'''\n",
+    "\n",
     "def getNeighbour(x_,X,dist_f): \n",
+    "    '''\n",
+    "    getNeighbour takes in a test data point (x_), training data (X), and distance function (dist_f);\n",
+    "    It loops through all training data and calls the distance function to calculate the distance between the test data point\n",
+    "    and all data points in the training set. Finds the smallest distance and returns index of the row with the smallest \n",
+    "    distance to test data point. \n",
+    "    '''\n",
     "    \n",
     "    smallest = dist_f(x_,X[0])\n",
     "    index = 0\n",
@@ -499,17 +506,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "myKNN function takes in training data X, training labels y, test data X_ and distance function \n",
-    "dist_function. It loops through all test data points, calls for getNeighbour to find neighbour of each point,\n",
-    "and assigns label based on the neighbour's label.\n",
-    "The function returns a list of predictions (list of predicted labels).\n",
-    "'''\n",
+    "\n",
     "def nearest_neighbour(X,y,X_,dist_function):\n",
+    "    '''\n",
+    "    nearest_neightbour function takes in training data X, training labels y, test data X_ and distance function \n",
+    "    dist_function. It loops through all test data points, calls for getNeighbour to find neighbour of each point,\n",
+    "    and assigns label based on the neighbour's label.\n",
+    "    The function returns a list of predictions (list of predicted labels).\n",
+    "    '''\n",
     "    \n",
     "    predictions = []\n",
     "    true_labels = []\n",
@@ -524,8 +532,10 @@
     "        \n",
     "    return predictions\n",
     "\n",
-    "# function to calculate accuracy (compares predictions with true labels)\n",
     "def accuracy(predictions,y_test):\n",
+    "    '''\n",
+    "    Given a list of predicted and actual target values, returns prediction accuracy\n",
+    "    '''\n",
     "    correct=0;\n",
     "    for i in range(len(y_test)):\n",
     "        if(predictions[i] == y_test[i]):\n",
@@ -535,25 +545,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Generate prediction using euclidean distance measure\n",
     "y_pred = nearest_neighbour(X_train,y_train,X_test,euclideanDistance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "euclidean_accuracy = accuracy(y_pred,y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -565,30 +567,24 @@
     }
    ],
    "source": [
+    "# Calculate accuracy of using euclidean distance measure\n",
+    "euclidean_accuracy = accuracy(y_pred,y_test)\n",
     "print(\"ACCURACY :\",euclidean_accuracy,\"% using distance function: \", euclideanDistance.__name__) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Generate prediction using manhattan distance measure\n",
     "y_pred = nearest_neighbour(X_train,y_train,X_test,manhattanDistance)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "manhattan_accuracy = accuracy(y_pred,y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -600,15 +596,10 @@
     }
    ],
    "source": [
+    "# Calculate accuracy of using manhattan distance measure\n",
+    "manhattan_accuracy = accuracy(y_pred,y_test)\n",
     "print(\"ACCURACY :\",manhattan_accuracy,\"% using distance function: \", manhattanDistance.__name__) "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
