--- a/Part2.ipynb
+++ b/Part2.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
@@ -12,9 +11,7 @@
   },
   {
    "cell_type": "code",
-
    "execution_count": 17,
-
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +21,6 @@
   },
   {
    "cell_type": "code",
-
    "execution_count": 18,
    "metadata": {},
    "outputs": [
@@ -372,7 +368,6 @@
        "[15000 rows x 24 columns]"
       ]
      },
-
      "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
@@ -384,7 +379,6 @@
   },
   {
    "cell_type": "code",
-
    "execution_count": 19,
    "metadata": {},
    "outputs": [
@@ -732,7 +726,6 @@
        "[15000 rows x 24 columns]"
       ]
      },
-
      "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
@@ -757,9 +750,7 @@
   },
   {
    "cell_type": "code",
-
    "execution_count": 21,
-
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +761,6 @@
        "         689,     0,     0,     0,     0], dtype=int64)"
       ]
      },
-
      "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
@@ -883,7 +873,9 @@
     "knn = KNeighborsClassifier(metric = 'minkowski')\n",
     "\n",
     "'''\n",
-    "k-Nearest Neighbours Classifier. \n",
+    "Classifier implementing the k-nearest neighbour algorithm that finds data points most similar to the point we're predicting\n",
+    "the label for, and classifies that point with the label of majority of its neighbours. \n",
+    "\n",
     "parameters: \n",
     "- n_neigbours = number of neigbours to use by default for kneighbors queries.\n",
     "- p = pinteger: (default = 2)\n",
@@ -1077,7 +1069,7 @@
     }
    ],
    "source": [
-    "# predictions on test set\n",
+    "# predictions on test set using the best knn model\n",
     "predY = best_knn_model.predict(X_test)\n",
     "predictions = pd.concat([pd.Series(y_test,name='True'), pd.Series(predY,name='PredictedClass')], axis=1)\n",
     "predictions"
@@ -1121,6 +1113,7 @@
    ],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
+    "#confusion matrix\n",
     "CM = confusion_matrix(y_test, predY, labels=[0, 1])\n",
     "CM"
    ]
@@ -1142,11 +1135,17 @@
     }
    ],
    "source": [
+    "#ravel() returns a flattened array with true negatives, false positives, false negatives and true positives\n",
     "tn, fp, fn, tp = CM.ravel()\n",
     "(tn, fp, fn, tp)\n",
     "\n",
     "recall=tp/(tp+fn)\n",
-    "recall"
+    "recall\n",
+    "\n",
+    "\n",
+    "# checking if it's correctly calculated\n",
+    "from sklearn.metrics import recall_score\n",
+    "recall_score(y_test, predY)"
    ]
   },
   {
@@ -1166,9 +1165,12 @@
     }
    ],
    "source": [
-    "# precision\n",
+    "# calculating precision\n",
     "prec=tp/(tp+fp)\n",
-    "prec"
+    "prec\n",
+    "\n",
+    "from sklearn.metrics import precision_score\n",
+    "precision_score(y_test, predY)"
    ]
   },
   {
@@ -1188,9 +1190,24 @@
     }
    ],
    "source": [
-    "# f1 \n",
+    "# calculating f1 measure \n",
     "f1= 2*prec*recall / (prec+recall)\n",
-    "f1"
+    "f1\n",
+    "\n",
+    "from sklearn.metrics import f1_score\n",
+    "f1_score(y_test, predY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculate precision and recall for each class \n",
+    "precision,recall,fscore,_ = metrics.precision_recall_fscore_support(y_test, predY)\n",
+    "for c in np.unique(y_test):\n",
+    "        print(\"class %s, precision: %.2f, recall: %.2f,  f-score: %.2f\" % (c, precision[c], recall[c], fscore[c]))"
    ]
   },
   {
@@ -1222,6 +1239,9 @@
     "clf = tree.DecisionTreeClassifier()\n",
     "\n",
     "'''\n",
+    "Classifier implementing the decision tree algorithm by using tree representation in which\n",
+    "internal nodes correspond to features, and each leaf node corresponds to a class label.\n",
+    "\n",
     "parameters:\n",
     "- max_depth - maximum depth of the tree.\n",
     "- critetion - function that measures the quality of the split. gini = Gini purity, entropy = information gain.\n",
@@ -1275,6 +1295,8 @@
     "mean_accuracies = scores['mean_test_score']\n",
     "params = scores['params']\n",
     "\n",
+    "#plotting the average accuracies for hyper-parameters\n",
+    "\n",
     "for i in range(len(mean_accuracies)):\n",
     "    if (params[i]['criterion'] == 'gini' and params[i]['max_features'] == 'sqrt'):\n",
     "        gini_sqrt['means'].append(mean_accuracies[i])\n",
@@ -1319,6 +1341,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "#plotting the average accuracies for hyper-parameters\n",
     "\n",
     "plt.plot([x for x in parameters['max_depth']], gini_sqrt['means'], 'mv--')\n",
     "plt.plot([x for x in parameters['max_depth']], entropy_sqrt['means'],'bo-')\n",
@@ -1451,6 +1474,7 @@
     }
    ],
    "source": [
+    "#predictions on test data using the model with the best parameters\n",
     "predY = best_tree_model.predict(X_test)\n",
     "predictions = pd.concat([pd.Series(y_test,name='True'), pd.Series(predY,name='PredictedClass')], axis=1)\n",
     "predictions"
@@ -1494,6 +1518,7 @@
    ],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
+    "#confusion matrix\n",
     "CM = confusion_matrix(y_test, predY, labels=[0, 1])\n",
     "CM"
    ]
@@ -1525,13 +1550,9 @@
     "tn, fp, fn, tp = CM.ravel()\n",
     "(tn, fp, fn, tp)\n",
     "\n",
+    "#calculating recall\n",
     "recall=tp/(tp+fn)\n",
-    "print(recall)\n",
-    "\n",
-    "\n",
-    "# checking if it's correctly calculated\n",
-    "from sklearn.metrics import recall_score\n",
-    "recall_score(y_test, predY)"
+    "print(recall)"
    ]
   },
   {
@@ -1558,12 +1579,9 @@
     }
    ],
    "source": [
-    "# precision\n",
+    "#calculating precision\n",
     "prec=tp/(tp+fp)\n",
-    "print(prec)\n",
-    "\n",
-    "from sklearn.metrics import precision_score\n",
-    "precision_score(y_test, predY)"
+    "print(prec)"
    ]
   },
   {
@@ -1590,12 +1608,9 @@
     }
    ],
    "source": [
-    "# f1 \n",
+    "#calculating f1 measure \n",
     "f1= 2*prec*recall / (prec+recall)\n",
-    "print(f1)\n",
-    "\n",
-    "from sklearn.metrics import f1_score\n",
-    "f1_score(y_test, predY)"
+    "print(f1)"
    ]
   },
   {
@@ -1603,7 +1618,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# calculate precision and recall for each class \n",
+    "precision,recall,fscore,_ = metrics.precision_recall_fscore_support(y_test, predY)\n",
+    "for c in np.unique(y_test):\n",
+    "        print(\"class %s, precision: %.2f, recall: %.2f,  f-score: %.2f\" % (c, precision[c], recall[c], fscore[c]))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2444,6 +2464,9 @@
     "svc = SVC(gamma = 'auto')\n",
     "\n",
     "'''\n",
+    "SVMs find the best way of diving data into two classes by searching for a hyperplane that best divides \n",
+    "a dataset into two classes. Support vectors are the points nearest to the hyperplane. \n",
+    "\n",
     "- C -  Regularization parameter. The strength of the regularization is inversely proportional to C. \n",
     "    Must be strictly positive. The penalty is a squared l2 penalty.\n",
     "- kernel - kernel type. \n",
@@ -2525,6 +2548,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#predictions using parameters of the best svm model found\n",
     "predY = best_svm_model.predict(X_test)"
    ]
   },
