--- a/Part2.ipynb
+++ b/Part2.ipynb
@@ -1229,14 +1229,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "best accuracy :  0.8178666666666666 , best parameters :  {'max_depth': 3, 'criterion': 'entropy', 'max_features': 'sqrt'}\n"
+      "best accuracy :  0.8202 , best parameters :  {'criterion': 'entropy', 'max_depth': 4, 'max_features': 'log2'}\n"
      ]
     }
    ],
@@ -1271,6 +1271,31 @@
     "\n",
     "scores = grid.cv_results_\n",
     "print ('best accuracy : ', grid.best_score_, ', best parameters : ',  grid.best_params_) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.06794602, 0.        , 0.        , 0.        , 0.00377133,\n",
+       "       0.15078771, 0.64668042, 0.        , 0.        , 0.00858635,\n",
+       "       0.0131708 , 0.        , 0.01382115, 0.        , 0.00815286,\n",
+       "       0.        , 0.00590291, 0.01487028, 0.        , 0.        ,\n",
+       "       0.05043104, 0.00526257, 0.01061657])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fi = best_tree_model.feature_importances_\n",
+    "fi"
    ]
   },
   {
