added to conclusion

--- a/Part2.ipynb
+++ b/Part2.ipynb
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +759,7 @@
        "[11682, 3318]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3115,7 +3115,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After tuning all of these algorthms give very similar results. However, Random Forest, Bagging and Boosting (best) achieved slightly better results than every other method that we have tested. These three algorithms are examples of ensemble methods which gain power by using many instances of themselves (repeated), which explains why they are able to achieve very good results. "
+    "After tuning, all of these algorthms give very similar results. The best versions of boosting and svm, however, achieved slightly better results than every other method that we have tested. These three algorithms are examples of ensemble methods which gain power by using many repreated instances of themselves, which explains why they are able to achieve very good results. Our SVM model exhibited the highest accuracy of .819 using a regularization variable of 1 and an radial basis function kernel. \n",
+    "\n",
+    "All of our models exhibited relatively high precision but low recall for class 1, indicating that the models may have been a bit overfitted; of all the yes instances predicted by the models, a relatively high percent were actually yes instances, but our models only predicted 30 - 35 % of these true yes instances. This could be a sign of overfitting, because our models may be too highly tuned to noise in training sets that require too much specificity for a data sample to be labeled 1. Alternatively, it may be because in both the training an test sets of target values, there are more than 3x as many class 0s as 1s, and thus the models are better tuned to correctly identifying class 0 instances; all models also have very high precision and recall for class 0. That said, our SVM model still exhibited one of the higher recall valeus for class 1, and would therefore be the best suited. "
    ]
   },
   {
